# network-control-demo

./: .gitignore  CLAUDE.md  ES_PROFILING_PHASE_REPORT.md  README.md  data_snippet.csv  evaluate_demo.sh  generate_cluster_metrics.py  generate_cluster_metrics_running_tasks.py  plot_epoch_cumulative.py  plot_query_rtt.py  plot_solver_comparison.py  reset_and_ingest.py  reset_es_index.py  rtt_results.csv  rtt_results_epoch.csv  rtt_results_epoch_with_solver.csv  rtt_solver_4.csv  rtt_sweep_common.py  run_rtt_sweep.py  run_rtt_sweep_epoch.py  run_rtt_sweep_epoch_with_solver.py  run_rtt_sweep_script.sh  usage.txt
CommonDependencies/dependencies/rs/promql_utilities/: Cargo.toml
CommonDependencies/dependencies/rs/sql_utilities/: Cargo.toml
ExecutionUtilities/high-throughput-kafka-producer/: Cargo.toml
ExecutionUtilities/high-throughput-kafka-producer/src/: main.rs
PrometheusExporters/cluster_data_exporter/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml.j2
PrometheusExporters/cluster_data_exporter/docker_compose_frames/: alibaba-msresource-2021-docker-compose.yml  alibaba-msresource-2022-docker-compose.yml  alibaba-node-2021-docker-compose.yml  alibaba-node-2022-docker-compose.yml  base-docker-compose.yml  google-docker-compose.yml
PrometheusExporters/cluster_data_exporter/installation/: install.sh
PrometheusExporters/cluster_data_exporter/scripts/: generate_docker_compose.py  requirements.txt
PrometheusExporters/cluster_data_exporter/src/: alibaba_metrics.rs  google_metrics.rs  main.rs  utilities.rs
PrometheusExporters/fake_kafka_exporter/: Cargo.toml  Dockerfile
PrometheusExporters/fake_kafka_exporter/installation/: install.sh
PrometheusExporters/fake_kafka_exporter/src/: main.rs
QueryEngineRust/: .pre-commit-config.yaml  Cargo.toml  Dockerfile  IMPLEMENTATION_PROGRESS.md  LICENSE  docker-compose.yml.j2  query-engine-rust-cli-compose.yml.j2  rustfmt.toml  test_run.sh
QueryEngineRust/.github/workflows/: rust.yml
QueryEngineRust/copilot_md_files/: ACCUMULATOR_MERGE_IMPLEMENTATION.md  CONFIGURATION_TESTS_FIXED_2025_01_25.md  CRITICAL_ISSUE_1_RESOLUTION.md  PYTHON_RUST_FUNCTIONALITY_COMPARISON.md  PYTHON_RUST_FUNCTIONALITY_COMPARISON_2025_01_25.md  PYTHON_RUST_FUNCTIONALITY_COMPARISON_2025_06_11.md  PYTHON_RUST_FUNCTIONALITY_COMPARISON_2025_06_13.md  RUST_IMPLEMENTATION_ROADMAP.md  TEMPORAL_AGGREGATION_IMPLEMENTATION.md  TRAIT_DESIGN_SOLUTION.md
QueryEngineRust/docs/: README.md  adding-fallback-backend.md  adding-protocol-adapter.md  adding-protocol-server.md
QueryEngineRust/installation/: install.sh
QueryEngineRust/src/: commenting_out_flink_diff  lib.rs  main.rs
QueryEngineRust/src/data_model/: aggregation_config.rs  aggregation_reference.rs  enums.rs  inference_config.rs  key_by_label_values.rs  measurement.rs  metric_config.rs  mod.rs  precomputed_output.rs  promql_schema.rs  query_config.rs  streaming_config.rs  traits.rs
QueryEngineRust/src/drivers/: http_server.rs  kafka_consumer.rs  mod.rs
QueryEngineRust/src/drivers/ingest/: kafka.rs  mod.rs
QueryEngineRust/src/engines/: mod.rs  query_result.rs  simple_engine.rs
QueryEngineRust/src/precompute_operators/: count_min_sketch_accumulator.rs  count_min_sketch_with_heap_accumulator.rs  datasketches_kll_accumulator.rs  delta_set_aggregator_accumulator.rs  hydra_kll_accumulator.rs  increase_accumulator.rs  min_max_accumulator.rs  mod.rs  multiple_increase_accumulator.rs  multiple_min_max_accumulator.rs  multiple_sum_accumulator.rs  set_aggregator_accumulator.rs  sum_accumulator.rs
QueryEngineRust/src/stores/: mod.rs  simple_map_store.rs  traits.rs
QueryEngineRust/src/tests/: clickhouse_forwarding_tests.rs  integration_test.rs  integration_tests.rs  mod.rs  prometheus_forwarding_tests.rs  query_equivalence_tests.rs  trait_design_tests.rs
QueryEngineRust/src/utils/: file_io.rs  http.rs  mod.rs  precompute_dumper.rs  promql.rs
QueryEngineRust/test_output/: generated_workload_prometheus_20251219_092439_1.yaml  inference_config.yaml  streaming_config.yaml
single_node_server/network-control-server/: .dockerignore  .gitignore  API.md  CLAUDE.md  Cargo.toml  Dockerfile  SUPPORT_MATRIX.md  agg-config.yaml  docker-build.sh  nodes-config.yaml  server-config.yaml  server.sh  server_request_timing.csv  test.py
single_node_server/network-control-server/src/: config.rs  ingest.rs  main.rs  metrics.rs  server.rs
single_node_server/network-control-server/target-noinc/: .rustc_info.json
single_node_server/network-control-server/tests/: dsl_parse_poc.rs
solver_experimental/: CLAUDE.md  README.md  analyze_logs.py  bench_queries.py  bench_queries_compare.csv  bench_queries_manifest.json  bench_queries_manifest.txt  bench_queries_rtt.csv  config.py  e2e.csv  emulate_telemetry.py  epoch_sweep.py  es_query.py  generate_topo.ipynb  logging_utils.py  main.py  pyproject.toml  query_compare.csv  query_rtt.csv  requirements.txt  run_greedy_baseline.py  run_main.sh
solver_experimental/configs/: sample.yml
solver_experimental/convex-optimization-project/: README.md  requirements.txt
solver_experimental/convex-optimization-project/src/: decision_variables.py  main.py  optimizer.py
solver_experimental/dummy_data/: assignments_log.jsonl  edges.csv  edges.jsonl  nodes.csv  nodes.jsonl  tasks.csv  tasks.jsonl
solver_experimental/python_solver/: README.md  pyproject.toml
solver_experimental/python_solver/artifacts/: network_controller.lp
solver_experimental/python_solver/data/: edges.json  existing_assignments.json  nodes.json  previous_assignments.json  solver_config.json  tasks.json
solver_experimental/python_solver/examples/: run_from_files.py
solver_experimental/python_solver/tests/: test_solver.py
solver_experimental/query_engine_utils/: config.py  server_querying.py  update_task_info.py
solver_experimental/scheduler/: entities.py  greedy_solver.py  load_info.py  solver.py
solver_experimental/scheduler/tests/: test_solver.py
solver_experimental/test_solver/: entities.py  load_info.py  solver.py  test4.py
solver_experimental/tests/: test_solver.py
(+707 files in other folders)
