[package]
name = "query_engine_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
promql_utilities = { path = "../CommonDependencies/dependencies/rs/promql_utilities" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rmp-serde = "1.1"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
rdkafka = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3"
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3"
urlencoding = "2.1"
flate2 = "1.0"
async-trait = "0.1"
promql-parser = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }
dsrs = { git = "https://github.com/SketchDB/datasketches-rs" }
base64 = "0.21"
hex = "0.4"

[dev-dependencies]
tempfile = "3.20.0"
