[package]
name = "kafka-throughput-producer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "producer"
path = "src/main.rs"

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures = "0.3"
