[package]
name = "cluster_data_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
prometheus = "0.14.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1.5"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
concurrent-queue = "2.5.0"
flate2 = "1.1.2"
clap = { version = "4.5.41", features = ["derive"] }