[package]
name = "fake_kafka_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rdkafka = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.9.1"
rand_distr = "0.5.1"
chrono = "0.4"
