[package]
name = "network-control-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
csv = "1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sketchlib-rust = { path = "../../sketchlib-rust" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
