[package]
name = "network-control-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = "0.7"
csv = "1.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
asap_sketchlib = { package = "asap_sketchlib", path = "../../../asap_sketchlib" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
elasticsearch-dsl-ast = { path = "../../../elasticsearch-dsl-ast" }
