[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-controller-solver"
version = "0.1.0"
description = "Capacity-aware task placement solver for network controllers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Network Controller Team" }
]
keywords = ["network", "optimization", "scheduling", "solver"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com/network-controller-solver"
