[package]
name = "promql_utilities"
version = "0.1.0"
edition = "2021"
authors = ["SketchDB Team"]
description = "A standalone PromQL pattern matching and query analysis library for Rust"
license = "MIT"
keywords = ["prometheus", "promql", "pattern-matching", "query-analysis"]
categories = ["parsing", "database", "development-tools"]

[dependencies]
promql-parser = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
